Added option for preserving font size in new notes

--- a/IdeaTree2/App.config
+++ b/IdeaTree2/App.config
@@ -40,6 +40,12 @@
             <setting name="MostRecentTemplate" serializeAs="String">
                 <value />
             </setting>
+            <setting name="DefaultFontSize" serializeAs="String">
+                <value>12</value>
+            </setting>
+            <setting name="MostRecentFontSize" serializeAs="String">
+                <value>12</value>
+            </setting>
         </IdeaTree2.Properties.Settings>
     </userSettings>
 </configuration>
