--- a/IdeaTree2/Properties/Settings.settings
+++ b/IdeaTree2/Properties/Settings.settings
@@ -38,5 +38,11 @@
     <Setting Name="MostRecentFont" Type="System.Object" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DefaultFontSize" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">12</Value>
+    </Setting>
+    <Setting Name="MostRecentFontSize" Type="System.Double" Scope="User">
+      <Value Profile="(Default)">12</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
